quote margin increase

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span class="display-4 text-dark ">fictional-animations</span>
         </nav>
 
-        <blockquote class="blockquote text-center my-4">
+        <blockquote class="blockquote text-center my-4 mx-2">
             <p class="mb-0">"Animation is not the art of drawings that move but the art of movements that are drawn."</p>
             <footer class="blockquote-footer">Norman McLaren</footer>
         </blockquote>
