--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="#">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+            integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
         <link rel="stylesheet" href="./styles/base.css">
 
-        <title>Document</title>
+        <title>fictional-animations</title>
     </head>
 
-    <body>
-        <nav class="navbar-light container-fluid-nav text-center">
-            <span class="display-4 text-dark ">fictional-animations</span>
+    <body class="bg-dark text-light">
+        <nav class="navbar-light container-fluid-nav text-center px-2">
+            <span class="display-4 responsive-text">fictional-animations</span>
         </nav>
 
         <blockquote class="blockquote text-center my-4 mx-2">
             <p class="mb-0">"Animation is not the art of drawings that move but the art of movements that are drawn."</p>
-            <footer class="blockquote-footer">Norman McLaren</footer>
+            <footer class="blockquote-footer text-light">Norman McLaren</footer>
         </blockquote>
 
         <div class="container">
-
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3">
 
                 <div class="col p-1">
-                    <div class="card">
+                    <div class="card bg-secondary">
                         <div class="card-body">
                             <h5 class="card-title">Animation 1</h5>
-                            <div class="embed-responsive embed-responsive-1by1">
+                            <div class="bg-white embed-responsive embed-responsive-1by1">
                                 <div id="anim-1" class="anim embed-responsive-item">
                                     <link rel="stylesheet" href="./styles/anim-1.css">
-                                    <svg class="anim-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 90 90" version="1.1">
+                                    <svg class="anim-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                                        xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 90 90" version="1.1">
                                         <g class="heart-svg-anim__group">
-                                            <path class="heart-svg-anim__square" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
-                                                fill="none" d="M0,30 0,90 60,90 60,30 z"/>
-                                            <path class="heart-svg-anim__circle left" stroke-width="3" stroke-linecap="round" fill="none"
+                                            <path class="heart-svg-anim__square" stroke-width="3" stroke-linecap="round"
+                                                stroke-linejoin="round" fill="none" d="M0,30 0,90 60,90 60,30 z" />
+                                            <path class="heart-svg-anim__circle left" stroke-width="3"
+                                                stroke-linecap="round" fill="none"
                                                 d="M60,60 a30,30 0 0,1 -60,0 a30,30 0 0,1 60,0" />
-                                            <path class="heart-svg-anim__circle right" stroke-width="3" stroke-linecap="round" fill="none"
+                                            <path class="heart-svg-anim__circle right" stroke-width="3"
+                                                stroke-linecap="round" fill="none"
                                                 d="M60,60 a30,30 0 0,1 -60,0 a30,30 0 0,1 60,0" />
-                                            <path class="heart-svg-anim__heartPath" stroke-width="6" stroke-linecap="round" stroke-linejoin="round"
+                                            <path class="heart-svg-anim__heartPath" stroke-width="6" stroke-linecap="round"
+                                                stroke-linejoin="round"
                                                 d="M60,30 a30,30 0 0,1 0,60 L0,90 0,30 a30,30 0 0,1 60,0" />
                                         </g>
                                     </svg>
@@ -55,18 +60,18 @@
                 </div>
 
                 <div class="col p-1">
-                    <div class="card">
+                    <div class="card bg-secondary">
                         <div class="card-body">
                             <h5 class="card-title">Animation 2</h5>
-                            <div class="embed-responsive embed-responsive-1by1">
+                            <div class="bg-white embed-responsive embed-responsive-1by1">
                                 <div id="anim-2" class="anim embed-responsive-item">
                                     <link rel="stylesheet" href="./styles/anim-2.css">
                                     <!-- <svg class="anim-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 90 90" version="1.1">
-                                        <g>
-                                            <path class="" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
-                                                fill="none" d="M 12 -12 C -8 -2 16 -1 0 0 C -4 0 -7 1 -9 -2 C -10 -4 -9 -7 -6 -6 C -7 -9 -4 -10 -2 -9 C 1 -7 0 -4 0 0 C 0 12 -11 -7 -10 11 L -11 9 M -10 11 L -9 9"/>
-                                        </g>
-                                    </svg> -->
+                                            <g>
+                                                <path class="" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"
+                                                    fill="none" d="M 12 -12 C -8 -2 16 -1 0 0 C -4 0 -7 1 -9 -2 C -10 -4 -9 -7 -6 -6 C -7 -9 -4 -10 -2 -9 C 1 -7 0 -4 0 0 C 0 12 -11 -7 -10 11 L -11 9 M -10 11 L -9 9"/>
+                                            </g>
+                                        </svg> -->
                                 </div>
                             </div>
                             <p class="card-text text-justify"></p>
@@ -75,11 +80,10 @@
                 </div>
 
                 <div class="col p-1">
-                    <div class="card">
+                    <div class="card bg-secondary">
                         <div class="card-body">
                             <h5 class="card-title">Animation 3</h5>
-                            <div class="embed-responsive embed-responsive-1by1">
-                                
+                            <div class="bg-white embed-responsive embed-responsive-1by1">
                             </div>
                             <p class="card-text text-justify"></p>
                         </div>
@@ -88,11 +92,19 @@
 
             </div>
         </div>
+
+        <footer class="bg-dark text-center text-white">
+            <div class="text-center p-4">
+                &copy; 2021 Copyright: <a class="text-white" href="https://github.com/jafetimbre">Jafet Imbre</a><span class="d-block d-sm-inline"> - MIT License</span>
+            </div>
+        </footer>
     </body>
 
-
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+        crossorigin="anonymous"></script>
 
 </html>
